# AP_homework_2

./: CMakeLists.txt  README.md  Wrapper.hpp  helpers.hpp  main.cpp  parser.hpp  wrapper.hpp
DataFrame/docs/HTML/: get_data_by_affin.html
DataFrame/examples/: CMakeLists.txt  hello_world.cc
INTERPOLATION/: CMakeLists.txt  InterpolateWrapper.hpp  helpers.hpp  main.cpp
INTERPOLATION/tests/: CMakeLists.txt  test_interpolation.cpp
STATISTICS/: CMakeLists.txt
STATISTICS/data/: r.csv  superstore_updated.csv
STATISTICS/include/: DataFrameCustomVisitors.hpp  DataFrameWrapper.hpp  InterpolateWrapper.hpp  parser.hpp
STATISTICS/src/: main.cpp
STATISTICS/tests/: test_statsmodule.cpp
STATISTICS/tests/data/: bank_out.csv  data_interpolation.csv  ecom_out.csv  plot_error.gnu
data/: o.csv  reduced.csv  reduced.csv_out  student_scores_updated.csv
include/: DataFrameCustomVisitors.hpp  DataFrameWrapper.hpp  InterpolateWrapper.hpp  Wrapper.hpp  helpers.hpp  parser.hpp
interpolation/: CMakeLists.txt  helpers.hpp  interpolator.hpp  main.cpp  wrapper.hpp
interpolation/tests/: CMakeLists.txt  test_interpolation.cpp
src/: main.cpp
testing/: main  main.cpp  student_scores_updated.csv  superstore_red.csv  superstore_updated.csv
tests/: CMakeLists.txt  test_customvisitors.cpp  test_statsmodule.cpp
tests/data/: errors.csv
